# wpass-gui

./: Cargo.toml  Constant.cs  FormMain.Designer.cs  FormMain.cs  FormMain.resx  FormSettings.Designer.cs  FormSettings.cs  GlobalHotkeyManager.cs  Program.cs  wpass-gui.csproj  wpass-gui.sln
src/: app.rs  lib.rs  main.rs  worker.rs
